# bitwarden-keyring

./: .gitignore  .pre-commit-config.yaml  .travis.yml  BOILERPLATE_GAP_CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  data.json  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml  renovate.json5
.github/workflows/: autofix.yml  ci.yml  coverage-comment.yml
bitwarden_keyring/: __init__.py  backend.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9d19c0270803d2ff___init___py.html  z_9d19c0270803d2ff_backend_py.html
tests/: conftest.py  test_bitwarden_keyring.py
